add layout html & images

--- a/2/LendingTree/LTWeb/Content/style.css
+++ b/2/LendingTree/LTWeb/Content/style.css
@@ -51,7 +51,7 @@ Body
     color: rgb(69, 85, 96);
     margin: 0pt;
     padding: 0pt;
-    background: url('../images/bg-repeat.jpg') repeat-y scroll center top transparent;
+    background: url('images/bg-repeat.jpg') repeat-y scroll center top transparent;
 }
 .website-wrapper
 {
@@ -157,7 +157,7 @@ h2
 }
 #step1 .form-content
 {
-    background: url('../images/bg-narrow-repeat.png') repeat-y scroll right top transparent;
+    background: url('images/bg-narrow-repeat.png') repeat-y scroll right top transparent;
     padding: 0pt;
     overflow: hidden;
 }
@@ -173,7 +173,7 @@ h2
 {
     width: 461px;
     height: 28px;
-    background: url('../images/bg-narrowgreen-end.png') repeat-y scroll right top transparent;
+    background: url('images/bg-narrowgreen-end.png') repeat-y scroll right top transparent;
 }
 #step1 .left-rail
 {
@@ -243,7 +243,7 @@ input[type=radio], input.radio
 }
 #step2 .form-content
 {
-    background: url('../images/bg-formframe-repeat.png') repeat-y scroll right top transparent;
+    background: url('images/bg-formframe-repeat.png') repeat-y scroll right top transparent;
     padding: 0pt 10px 0pt 10px;
     overflow: hidden;
 }
@@ -258,7 +258,7 @@ input[type=radio], input.radio
 {
     width: 529px;
     height: 29px;
-    background: url('../images/bg-formframebottom.png') repeat-y scroll right top transparent;
+    background: url('images/bg-formframebottom.png') repeat-y scroll right top transparent;
     padding: 0pt !important;
 }
 #step2 .left-rail
@@ -284,7 +284,7 @@ input[type=radio], input.radio
 }
 #step3 .form-content
 {
-    background: url('../images/bg-formframe-repeat.png') repeat-y scroll right top transparent;
+    background: url('images/bg-formframe-repeat.png') repeat-y scroll right top transparent;
     padding: 0px 25px;
     overflow: hidden;
 }
@@ -296,7 +296,7 @@ input[type=radio], input.radio
 {
     width: 529px;
     height: 29px;
-    background: url('../images/bg-formframebottom.png') repeat-y scroll right top transparent;
+    background: url('images/bg-formframebottom.png') repeat-y scroll right top transparent;
     padding: 0pt !important;
 }
 #step3 .left-rail
@@ -328,7 +328,7 @@ input[type=radio], input.radio
 .leftRailImage
 {
     height: 170px;
-    background: url('../images/bg-sidebar-field.png') no-repeat scroll left top transparent;
+    background: url('images/bg-sidebar-field.png') no-repeat scroll left top transparent;
     margin: 10px 0pt 0pt;
 }
 .dropdown-item, .enter-item, .radio-item
@@ -488,7 +488,7 @@ div.smartTipWindow
 }
 #reviewContainer
 {
-    background: url('../images/graphic-review.gif') no-repeat scroll left top transparent;
+    background: url('images/graphic-review.gif') no-repeat scroll left top transparent;
     clear: both;
     float: none;
     font-family: arial;
@@ -516,9 +516,10 @@ div.smartTipWindow
 
 #topheader
 {
+    background-image: url('images/logo.png');
     margin: 0pt auto;
     width: 770px;
-    height: 50px; /*background-image: url('../images/logo.png');*/
+    height: 50px;
     background-repeat: no-repeat;
     text-align: right;
     font-size: 17px;
@@ -548,7 +549,7 @@ div.smartTipWindow
 }
 #page1FormHeader
 {
-    background: url('../images/bg-narrowgreen.png') no-repeat scroll right top transparent;
+    background: url('images/bg-narrowgreen.png') no-repeat scroll right top transparent;
     color: rgb(255, 255, 255);
     text-align: center;
     padding: 30px 40px 0px 10px;
@@ -569,7 +570,7 @@ div.smartTipWindow
 }
 #page2FormHeader
 {
-    background: url('../images/bg-formframetop.png') no-repeat scroll right top transparent;
+    background: url('images/bg-formframetop.png') no-repeat scroll right top transparent;
     color: rgb(255, 255, 255);
     text-align: center;
     padding: 30px 40px 0px 15px !important;
@@ -585,7 +586,7 @@ div.smartTipWindow
 }
 #page3FormHeader
 {
-    background: url('../images/bg-formframetop.png') no-repeat scroll right top transparent;
+    background: url('images/bg-formframetop.png') no-repeat scroll right top transparent;
     color: rgb(255, 255, 255);
     text-align: left;
     padding: 30px 40px 0px 30px !important;
@@ -597,7 +598,7 @@ div.smartTipWindow
 }
 .security
 {
-    background: url('../images/icon-lock.png') no-repeat scroll left top transparent;
+    background: url('images/icon-lock.png') no-repeat scroll left top transparent;
     width: 30px;
     height: 70px;
     position: relative;
@@ -622,7 +623,7 @@ div.smartTipWindow
 {
     width: 324px;
     height: 72px;
-    background-image: url('../images/btn-getquotes.jpg');
+    background-image: url('images/btn-getquotes.jpg');
     margin-top: 30px;
     border: 0px;
     cursor: pointer;
@@ -631,7 +632,7 @@ div.smartTipWindow
 {
     width: 201px;
     height: 72px;
-    background-image: url('../images/btn-continue.jpg');
+    background-image: url('images/btn-continue.jpg');
     margin-top: 30px;
     border: 0px;
     cursor: pointer;
@@ -640,7 +641,7 @@ div.smartTipWindow
 {
     width: 259px;
     height: 72px;
-    background-image: url('../images/btn-showresults.jpg');
+    background-image: url('images/btn-showresults.jpg');
     margin-left: -5px;
     border: 0px;
     cursor: pointer;
@@ -653,7 +654,7 @@ div.smartTipWindow
 }
 #page2RailChecklist li, #page3RailChecklist li
 {
-    background: url('../images/icon-check.gif') no-repeat scroll left top transparent;
+    background: url('images/icon-check.gif') no-repeat scroll left top transparent;
     padding: 8px 0pt 0pt 30px;
     font-size: 19px;
     min-height: 25px;
