--- a/2/LendingTree/LTWeb/Views/Questions/FormFields.cshtml
+++ b/2/LendingTree/LTWeb/Views/Questions/FormFields.cshtml
@@ -22,6 +22,18 @@
                     </div>
 
                 </div>
+                <div>
+
+                    <div style="width: 400px; margin-right: @(Model.QuestionIndex == 0 ? "100px" : "150px")">
+                        <div style="float: left; margin-top: 20px;">
+                            <div class="security"></div>
+                        </div>
+                        <div style="float: left;">
+                            <input type="submit" value="" id="ContentPlaceHolder1_GetQuoteNow1_Button1" class="@(Model.QuestionIndex == 0 ? "btnPage1" : "btnPage2")" />
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
