--- a/2/LendingTree/LTWeb/Views/Shared/LTModel.cshtml
+++ b/2/LendingTree/LTWeb/Views/Shared/LTModel.cshtml
@@ -6,11 +6,6 @@
     var sessionModel = HttpContext.Current.Session["LTModel"] as LTWeb.Service.ILendingTreeModel;
     if(sessionModel != null)
     {
-        WriteLiteral(sessionModel.GetXMLForPost()         
-            .Replace("<", "[")
-            .Replace(">", "]")                                                                        
-            .Replace("\r", "")
-            .Replace("\n", "<br/>")
-            );
+        Write(sessionModel.GetXMLForPost());
     }
 }
