AdjustQuestion, save settings & ltmodel in session

--- a/2/LendingTree/LTWeb/Views/Shared/_LTLayout.cshtml
+++ b/2/LendingTree/LTWeb/Views/Shared/_LTLayout.cshtml
@@ -25,9 +25,9 @@
                     <h2>
                         Refinance Rates From</h2>
                     <div class="rate">
-                        @LTWeb.Settings.Admin["Rate1"]%
+                        @LTWeb.Settings.Admin["Rate1"]
                         <br />   
-                        (@LTWeb.Settings.Admin["Rate2"]% APR)*</div>
+                        (@LTWeb.Settings.Admin["Rate2"] APR)*</div>
                     <h2>
                         Affordable Mortgage Payments</h2>
                     <div class="smallLabel">
