--- a/2/LendingTree/LTWeb/Views/Shared/LTModel.cshtml
+++ b/2/LendingTree/LTWeb/Views/Shared/LTModel.cshtml
@@ -2,10 +2,6 @@
     Layout = null;
 }
 
-@{
-    var sessionModel = HttpContext.Current.Session["LTModel"] as LTWeb.Service.ILendingTreeModel;
-    if(sessionModel != null)
-    {
-        Write(sessionModel.GetXMLForPost());
-    }
-}
+<pre>
+@LTWeb.Settings.LTModel.GetXMLForPost()
+</pre>
