--- a/2/LendingTree/LTWeb/Views/Shared/_Layout.cshtml
+++ b/2/LendingTree/LTWeb/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     @RenderBody()
 
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/Scripts/lt-script.js")
     @RenderSection("scripts", required: false)
 </body>
 </html>
