--- a/2/LendingTree/LTWeb/Views/Shared/_LTLayout.cshtml
+++ b/2/LendingTree/LTWeb/Views/Shared/_LTLayout.cshtml
@@ -49,9 +49,10 @@
                     </div>
                 </div>
             </div>
-
-    @RenderBody()
-
+            <div id="form-fields" class="form-fields">
+                @RenderBody()
+            </div>
+            <!--form fields-->
             <div class="clear">
             </div>
         </div>
