--- a/2/LendingTree/LTWeb/Views/Shared/_LTLayout.cshtml
+++ b/2/LendingTree/LTWeb/Views/Shared/_LTLayout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/lt_css")
+    @Styles.Render("~/Content/lt_css", "~/Content/themes/base/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
@@ -105,8 +105,7 @@
         <!--End .website-wrapper-->
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/Scripts/lt-script.js")
+    @Scripts.Render("~/bundles/jquery", "~/bundles/jqueryui", "~/Scripts/lt-script.js")
     @RenderSection("scripts", required: false)
 </body>
 </html>
