--- a/2/LendingTree/LTWeb/Views/Questions/ShowInner.cshtml
+++ b/2/LendingTree/LTWeb/Views/Questions/ShowInner.cshtml
@@ -28,4 +28,6 @@
         <input name="@Model.Key" type="text" />
         break;
 }
-@Model.Subtext
+@if (!string.IsNullOrWhiteSpace(Model.Subtext)) {
+    <br />@Model.Subtext
+}
