--- a/2/LendingTree/LTWeb/Views/Shared/_LTLayout.cshtml
+++ b/2/LendingTree/LTWeb/Views/Shared/_LTLayout.cshtml
@@ -31,7 +31,7 @@
                     <h2>
                         Affordable Mortgage Payments</h2>
                     <div class="smallLabel">
-                        Example payments are for a 5/1 adjustable rate mortgage loan</div>
+                        Example payments are for a 5/1 ARM rates subject</div>
                 </div>
                 <div id="payments">
                     <h2 class="green">
@@ -44,7 +44,7 @@
                         $400,000 mortgage for $1,607/mo.
                     </h2>
                     <div class="disclosure">
-                        <a href="javascript:STMRCWindow('http://www.lendingtree.com/stmrc/promotional_disclosures.asp?disclosures=00018,00031,00065,00021')">
+                        <a href="javascript:STMRCWindow('https://www.lendingtree.com/legal/advertising-disclosures-offers?disclosures=00018,00031,00065,00021')">
                             Full Advertising Disclosures</a>
                     </div>
                 </div>
@@ -86,10 +86,10 @@
                 </div>
                 <!--End .footer-logo-->
                 <div class="footer-text">
-                    <a href="javascript:STMRCWindow('http://www.lendingtree.com/stmrc/privacy.asp?nonav=true&bp=ltquickmatch', 550, 450)">
-                        Privacy Policy</a> | <a href="javascript:STMRCWindow('http://www.lendingtree.com/stmrc/termsofuse.asp?bp=v3&nonav=true')">
-                            Terms of Use</a> | <a href="javascript:STMRCWindow('http://www.lendingtree.com/stmrc/disclosure.asp?nonav=true&bp=ltquickmatch',550, 450)">
-                                Licenses &amp; Disclosures</a>  | <a href="javascript:STMRCWindow('http://www.lendingtree.com/stmrc/promotional_disclosuresv1.asp',550, 450)">
+                    <a href="javascript:STMRCWindow('http://www.lendingtree.com/stmrc/privacy.asp?popup=true&bp=ltquickmatch', 550, 450)">
+                        Privacy Policy</a> | <a href="javascript:STMRCWindow('https://www.lendingtree.com/legal/termsofuse?popup=true')">
+                            Terms of Use</a> | <a href="javascript:STMRCWindow('https://www.lendingtree.com/legal/licenses-and-disclosures?popup=true',550, 450)">
+                                Licenses &amp; Disclosures</a>  | <a href="javascript:STMRCWindow('https://www.lendingtree.com/legal/advertising-disclosures',550, 450)">
                                 Full Advertising Disclosures</a><br />
                     <br />
                     <p style="text-align: left;">
