--- a/2/LendingTree/LTWeb/Views/Questions/FormFields.cshtml
+++ b/2/LendingTree/LTWeb/Views/Questions/FormFields.cshtml
@@ -18,7 +18,11 @@
             <div id="form_inner_1step">
                 @using (Html.BeginForm("Save", "Questions", FormMethod.Post, new { id = "questionForm" }))
                 {
-                <div>
+                <div style="width:380px">
+                    @if (!string.IsNullOrWhiteSpace(Model.Supertext))
+                    {
+                        <span class="green">@Model.Supertext</span><br /><br />
+                    }
                     <div style="margin-bottom: 18px; margin-left: 80px; width: 300px;">
                         @Html.Partial("ShowInner")
                         @{
