--- a/2/LendingTree/LTWeb/Views/Shared/_LTLayout.cshtml
+++ b/2/LendingTree/LTWeb/Views/Shared/_LTLayout.cshtml
@@ -105,7 +105,7 @@
         <!--End .website-wrapper-->
     </div>
 
-    @Scripts.Render("~/bundles/jquery", "~/bundles/jqueryui", "~/Scripts/lt-script.js")
+    @Scripts.Render("~/bundles/jquery", "~/bundles/jqueryui", "~/Scripts/jquery.history.js", "~/Scripts/lt-script.js")
     @RenderSection("scripts", required: false)
 </body>
 </html>
