prevent IE from caching ajax

--- a/2/LendingTree/LTWeb/Views/Questions/FormFields.cshtml
+++ b/2/LendingTree/LTWeb/Views/Questions/FormFields.cshtml
@@ -62,6 +62,7 @@
 
 (function(window,undefined){
     InitializeProgressbar(@Model.Progress); //after full page load
+    $.ajaxSetup({ cache: false });
 
     var History = window.History;
     if (!History.enabled) {
