remembering prev answers

--- a/2/LendingTree/LTWeb/Views/Questions/ShowInner.cshtml
+++ b/2/LendingTree/LTWeb/Views/Questions/ShowInner.cshtml
@@ -9,14 +9,14 @@
         <select name="@Model.Key">
         @foreach (var option in Model.Options)
         {
-            <option value="@option.Value">@option.Text</option>
+            <option value="@option.Value" @( option.Value == Model.Answer ? "selected=\"selected\"" : "" )>@option.Text</option>
         }
         </select>
         break;
     case "radio":
         foreach (var option in Model.Options)
         {
-            <input type="radio" name="@Model.Key" value="@option.Value" />@option.Text<br />
+            <input type="radio" name="@Model.Key" value="@option.Value" @( option.Value == Model.Answer ? "checked=\"checked\"" : "" ) />@option.Text<br />
         }
         break;
     case "3part":
@@ -25,7 +25,7 @@
         <input type="text" />-->
         break;
     default:
-        <input name="@Model.Key" type="text" />
+        <input name="@Model.Key" type="text" value="@Model.Answer" />
         break;
 }
 @if (!string.IsNullOrWhiteSpace(Model.Subtext)) {
