--- a/2/LendingTree/LTWeb/Views/Shared/_LTLayout.cshtml
+++ b/2/LendingTree/LTWeb/Views/Shared/_LTLayout.cshtml
@@ -111,6 +111,7 @@
                 "~/Scripts/jquery.history.js", 
                 "~/bundles/validation", 
                 "~/Scripts/lt-script.js")
+    @Styles.Render("~/Scripts/validation-engine/css/validationEngine.jquery.css");
     @RenderSection("scripts", required: false)
 </body>
 </html>
