def val for cred hist, zip; use XmlEnumAttribute in GetEnumName

--- a/2/LendingTree/LTWeb/Views/Questions/Show.cshtml
+++ b/2/LendingTree/LTWeb/Views/Questions/Show.cshtml
@@ -27,7 +27,7 @@
 @Html.ActionLink("Save All", "SaveAll")
 
 <br /><br />
-@Html.Partial("LTModel")
+<pre>@LTWeb.Session.LTModel.GetXMLForPost())</pre>
 
 @section Scripts {
 <script type="text/javascript">
