--- a/2/LendingTree/LTWeb/Views/Questions/ShowInner.cshtml
+++ b/2/LendingTree/LTWeb/Views/Questions/ShowInner.cshtml
@@ -23,7 +23,7 @@
         <input name="@Model.Key" type="text" />
         break;
     case "zipcode":
-        <input name="@Model.Key" type="text" maxlength="5" class="validate[required,custom[zipcode]]" data-prompt-position="bottomLeft" />
+        <input name="@Model.Key" type="text" value="@Model.Answer" maxlength="5" class="validate[required,custom[zipcode]]" data-prompt-position="bottomLeft" />
         break;
     default:
         <input name="@Model.Key" type="text" value="@Model.Answer" class="validate[required]" data-prompt-position="bottomLeft" />
