--- a/2/LendingTree/LTWeb/Views/Questions/Show.cshtml
+++ b/2/LendingTree/LTWeb/Views/Questions/Show.cshtml
@@ -24,7 +24,7 @@
 @Html.ActionLink("Next", "Show", new { q = Model.QuestionIndex + 1, test = true })
 
 <br /><br />
-@Html.ActionLink("Save All", "SaveAll")
+@Html.ActionLink("Question 19", "Show", new { q = 19, test = true })
 
 <br /><br />
 <pre>@LTWeb.Session.LTModel.GetXMLForPost())</pre>
