--- a/2/LendingTree/LTWeb/Views/Questions/ShowInner.cshtml
+++ b/2/LendingTree/LTWeb/Views/Questions/ShowInner.cshtml
@@ -20,7 +20,7 @@
         }
         break;
     case "3part":
-        <input name="@Model.Key" type="text" />
+        <input name="@Model.Key" type="text" value="@Model.Answer" />
         break;
     case "zipcode":
         <input name="@Model.Key" type="text" value="@Model.Answer" maxlength="5" class="validate[required,custom[zipcode]]" data-prompt-position="bottomLeft" />
