--- a/2/LendingTree/LTWeb/Content/style.css
+++ b/2/LendingTree/LTWeb/Content/style.css
@@ -377,6 +377,7 @@ input[type=radio], input.radio
 }
 .submitboard
 {
+    width: 325px;
     margin: 10px auto;
     text-align: left;
     padding: 0pt 10px 0 10px;
@@ -646,7 +647,7 @@ div.smartTipWindow
     width: 259px;
     height: 72px;
     background-image: url('images/btn-showresults.jpg');
-    margin-left: -5px;
+    margin-top: 30px;
     border: 0px;
     cursor: pointer;
     float: left;
